FIx styling on overflowing code blocks

--- a/content/css/syntax.css
+++ b/content/css/syntax.css
@@ -6,6 +6,7 @@ code {
 .code-block {
     display: block;
     padding: 1em;
+    overflow: scroll;
 }
 
 
